Coe tidy on serialisation and some deprecated methods.